Removed period prefix from “this” hash targets.

--- a/ComplexNumber.html
+++ b/ComplexNumber.html
@@ -193,11 +193,11 @@ bat.<a href="#.prototype.toString">toString</a>()<span class="comment">//  Retur
 cat.<a href="#.prototype.toString">toString</a>()<span class="comment">//  Returns '1 + 2i'</span>
 dog.<a href="#.prototype.toString">toString</a>()<span class="comment">//  Returns '1 + 2i'</span>
 
-cat.<a href="#.this.index">index</a> === dog.<a href="#.prototype.index">index</a><span class="comment">//  Returns false</span>
+cat.<a href="#this.index">index</a> === dog.<a href="#.prototype.index">index</a><span class="comment">//  Returns false</span>
 </pre></code>
 			<ul class="properties">
 				<li>
-					<dt id=".this.real"><a href="#.this.real">real</a></dt>
+					<dt id="this.real"><a href="#this.real">real</a></dt>
 					<dd>
 						Traditionally the first argument, 
 						a <a href="ComplexNumber.html#.isNumberLike">number-like</a> value 
@@ -206,7 +206,7 @@ cat.<a href="#.this.index">index</a> === dog.<a href="#.prototype.index">index</
 					</dd>
 				</li>
 				<li>
-					<dt id=".this.imaginary"><a href="#.this.imaginary">imaginary</a></dt>
+					<dt id="this.imaginary"><a href="#this.imaginary">imaginary</a></dt>
 					<dd>
 						Traditionally the second argument, 
 						a <a href="ComplexNumber.html#.isNumberLike">number-like</a> value 
@@ -215,7 +215,7 @@ cat.<a href="#.this.index">index</a> === dog.<a href="#.prototype.index">index</
 					</dd>
 				</li>
 				<li>
-					<dt id=".this.index"><a href="#.this.index">index</a></dt>
+					<dt id="this.index"><a href="#this.index">index</a></dt>
 					<dd>
 						An auto-incrementing identification number assigned to the instance,
 						used for minding the total number of instances created.
