--- a/Gate.html
+++ b/Gate.html
@@ -61,11 +61,11 @@
 			</p>
 			<ul class="properties">
 				<li>
-					<dt id=".this.label"><a href="#.this.label">label</a></dt>
+					<dt id="this.label"><a href="#this.label">label</a></dt>
 					<dd>Description TK.</dd>
 				</li>
 				<li>
-					<dt id=".this.index"><a href="#.this.index">index</a></dt>
+					<dt id="this.index"><a href="#this.index">index</a></dt>
 					<dd>
 						An auto-incrementing identification number assigned to the instance,
 						used for minding the total number of instances created.
