--- a/Matrix.html
+++ b/Matrix.html
@@ -126,19 +126,19 @@ var a = new Q.Matrix(
 </code></pre>
 			<ul class="properties">
 				<li>
-					<dt id=".this.rows"><a href="#.this.rows">rows</a></dt>
+					<dt id="this.rows"><a href="#this.rows">rows</a></dt>
 					<dd>
 						The <code>Array</code> of the supplied <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Functions/arguments" target="_blank">arguments</a></code>.
 					</dd>
 				</li>
 				<li>
-					<dt id=".this.columns"><a href="#.this.columns">columns</a></dt>
+					<dt id="this.columns"><a href="#this.columns">columns</a></dt>
 					<dd>
-						An <code>Array</code> of getters and setters that operate on the <a href="#.this.rows">rows</a> property to appear as if this property contained actual values. 
+						An <code>Array</code> of getters and setters that operate on the <a href="#this.rows">rows</a> property to appear as if this property contained actual values. 
 					</dd>
 				</li>
 				<li>
-					<dt id=".this.index"><a href="#.this.index">index</a></dt>
+					<dt id="this.index"><a href="#this.index">index</a></dt>
 					<dd>
 						An auto-incrementing identification number assigned to the instance,
 						used for minding the total number of instances created.
