--- a/Qubit.html
+++ b/Qubit.html
@@ -177,23 +177,23 @@ var a = new Q.Qubit( 0, 1 )
 </code></pre>
 			<ul class="properties">
 				<li>
-					<dt id=".this.controlBit"><a href="#.this.controlBit">controlBit</a></dt>
+					<dt id="this.controlBit"><a href="#this.controlBit">controlBit</a></dt>
 					<dd>Description TK.</dd>
 				</li>
 				<li>
-					<dt id=".this.targetBit"><a href="#.this.targetBit">targetBit</a></dt>
+					<dt id="this.targetBit"><a href="#this.targetBit">targetBit</a></dt>
 					<dd>Description TK.</dd>
 				</li>
 				<li>
-					<dt id=".this.dirac"><a href="#.this.dirac">dirac</a></dt>
+					<dt id="this.dirac"><a href="#this.dirac">dirac</a></dt>
 					<dd>Description TK.</dd>
 				</li>
 				<li>
-					<dt id=".this.name"><a href="#.this.name">name</a></dt>
+					<dt id="this.name"><a href="#this.name">name</a></dt>
 					<dd>Description TK.</dd>
 				</li>
 				<li>
-					<dt id=".this.index"><a href="#.this.index">index</a></dt>
+					<dt id="this.index"><a href="#this.index">index</a></dt>
 					<dd>
 						An auto-incrementing identification number assigned to the instance,
 						used for minding the total number of instances created.
@@ -255,7 +255,7 @@ var a = new Q.Qubit( 0, 1 )
 						Initialized to zero, this number is then incremented each time an instance is created
 						in order to promote mindfulness of the total number instances in the system.
 						At the time of instance creation the instance is assigned a copy of this value
-						to its own <code><a href="#.this.index">index</a></code> property.
+						to its own <code><a href="#this.index">index</a></code> property.
 					</dd>
 				</li>
 				<li>
