--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ cat.<a href="ComplexNumber.html#.toString">toString</a>() <span class="comment">
 					<dt id=".REVISION"><a href="#.REVISION">REVISION</a></dt>
 					<dd>
 						The code revision number. 
-						The version of <code>Q</code> loaded on this web page is revision #<strong id="q-revision"></strong>.
+						The version of Q currently loaded on this web page is revision #<strong id="q-revision">NOT FOUND</strong>.
 					</dd>
 				</li>
 				<li>
@@ -484,11 +484,25 @@ a.<a href="ComplexNumber.html#.prototype.multiply">multiply</a>( a )
 
 
 
+//  Exploration encouragement!
+
 console.log( '\n\n\nYou did it! You opened your browser’s JavaScript console!!\n\n\n\n' )
 console.log( '\n\n\nNow try navigating to the other topic pages to learn more and experiment with Q.\n\n\n\n' )
-		
 
 
+
+
+//  Let’s go ahead and add those examples to the current interpreter state
+//  so a read can begin playing with them straight away.
+
+var 
+cat = new Q.ComplexNumber( 1,  2 ),
+dog = new Q.ComplexNumber( 3, -4 )
+
+
+
+
+//  Insert the current Q.js revision number in to the description of the REVISION property.
 
 document.getElementById( 'q-revision' ).innerText = Q.REVISION
 
