Oops on theta and phi symbols.

--- a/Qubit.html
+++ b/Qubit.html
@@ -149,8 +149,8 @@
 					<span class="symbol">a</span> = <span id="bloch-control-bit">—</span><br>
 					<span class="symbol">b</span> = <span id="bloch-target-bit">—</span><br>
 					<br>
-					<span id="bloch-theta">—</span>˚ polar angle ϕ (theta)<br>
-					<span id="bloch-phi">—</span>˚ azimuth θ (phi)
+					<span id="bloch-theta">—</span>˚ polar angle θ (theta)<br>
+					<span id="bloch-phi">—</span>˚ azimuth angle ϕ (phi)
 				</div>
 			</div>
 			<p>
@@ -350,8 +350,8 @@ var a = new Q.Qubit( 0, 1 )
 						useful for rendering a <a href="#Bloch_sphere">Bloch Sphere</a> representation.
 <pre><code>
 {
-	theta, <span class="comment">//  Polar angle ϕ.</span>
-	phi,   <span class="comment">//  Azimuth θ.</span>
+	theta, <span class="comment">//  Polar angle θ.</span>
+	phi,   <span class="comment">//  Azimuth angle ϕ.</span>
 
 	
 	<span class="comment">//  Bloch vector,
