Analytics and future boarding.

--- a/Board.html
+++ b/Board.html
@@ -50,11 +50,11 @@
 	</head>
 	<body>
 		<main>
-			<h3>Quantum programs—Coming soon</h3>
+			<h3>Board specs—Coming soon</h3>
 			<p>
-				A circuit is an assembly of gates on a board that operate on qubits;
-				it’s a quantum program.
-				But we’re not  <em>quite</em> ready to program yet. 
+				Boards will make it easier to assemble gates—and also place real-world constraints on their positions and interactions—by specifiying possible layouts.
+				This is a necessary step in bridging the gap between the abstract circuits created here
+				and the real-world quantum hardware we will want to run these programs on.
 			</p>
 			<br>
 			<p>
