--- a/ComplexNumber.html
+++ b/ComplexNumber.html
@@ -132,6 +132,14 @@
 				where <span class="symbol">a</span> is the real component and 
 				<span class="symbol">bi</span> is the imaginary component. 
 				Some examples might be 1 + 2<span class="symbol">i</span> or 3 - 4<span class="symbol">i</span>.
+<!--
+
+
+This would be a great place to add a^2 + b^2 = c^2
+https://youtu.be/pBh7Xqbh5JQ?t=352
+
+
+-->
 				This is what the <code>ComplexNumber</code> class was created to handle.
 				Open up your JavaScript console and paste in the following:
 			</p>
@@ -239,35 +247,35 @@ cat.<a href="#this.index">index</a> === dog.<a href="#.prototype.index">index</a
 			<ul class="properties">
 				<li>
 					<dt id=".ZERO"><a href="#.ZERO">ZERO</a></dt>
-					<dd><code>= new Q.ComplexNumber( 0, 0 )</code></dd>
+					<dd><code>new Q.ComplexNumber( 0, 0 )</code></dd>
 				</li>
 				<li>
 					<dt id=".ONE"><a href="#.ONE">ONE</a></dt>
-					<dd><code>= new Q.ComplexNumber( 1, 0 )</code></dd>
+					<dd><code>new Q.ComplexNumber( 1, 0 )</code></dd>
 				</li>
 				<li>
 					<dt id=".E"><a href="#.E">E</a></dt>
-					<dd><code>= new Q.ComplexNumber( Math.E, 0 )</code></dd>
+					<dd><code>new Q.ComplexNumber( Math.E, 0 )</code></dd>
 				</li>
 				<li>
 					<dt id=".PI"><a href="#.PI">PI</a></dt>
-					<dd><code>= new Q.ComplexNumber( Math.PI, 0 )</code></dd>
+					<dd><code>new Q.ComplexNumber( Math.PI, 0 )</code></dd>
 				</li>
 				<li>
 					<dt id=".I"><a href="#.I">I</a></dt>
-					<dd><code>= new Q.ComplexNumber( 0, 1 )</code></dd>
+					<dd><code>new Q.ComplexNumber( 0, 1 )</code></dd>
 				</li>
 				<li>
 					<dt id=".EPSILON"><a href="#.EPSILON">EPSILON</a></dt>
-					<dd><code>= new Q.ComplexNumber( Q.<a href="index.html#.EPSILON">EPSILON</a>, Q.<a href="index.html#.EPSILON">EPSILON</a> )</code></dd>
+					<dd><code>new Q.ComplexNumber( Q.<a href="index.html#.EPSILON">EPSILON</a>, Q.<a href="index.html#.EPSILON">EPSILON</a> )</code></dd>
 				</li>
 				<li>
 					<dt id=".INFINITY"><a href="#.INFINITY">INFINITY</a></dt>
-					<dd><code>= new Q.ComplexNumber( Infinity, Infinity )</code></dd>
+					<dd><code>new Q.ComplexNumber( Infinity, Infinity )</code></dd>
 				</li>
 				<li>
 					<dt id=".NAN"><a href="#.NAN">NAN</a></dt>
-					<dd><code>= new Q.ComplexNumber( NaN, NaN )</code></dd>
+					<dd><code>new Q.ComplexNumber( NaN, NaN )</code></dd>
 				</li>
 			</ul>
 			<hr>
