Matrix CSS. Index vs Q.

--- a/Board.html
+++ b/Board.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Q ⟩ Gate</title>
+		<title>Q ⟩ Board</title>
 		<meta charset="utf-8">
 		<meta name="description"          content="Q.js is quantum computing in your browser.">
 		<meta name="copyright"            content="Stewart Smith 2019">
@@ -22,17 +22,17 @@
 		<meta name="twitter:card"         content="summary">
 		<meta name="twitter:site"         content="@stew_rtsmith">
 		<meta name="twitter:creator"      content="@stew_rtsmith">
-		<meta name="twitter:title"        content="Q ⟩ Circuit">
+		<meta name="twitter:title"        content="Q ⟩ Board">
 		<meta name="twitter:description"  content="Quantum computing in your browser.">
 		<meta name="twitter:image"        content="https://stewdio.github.io/q.js/Assets/q-thumbnail.png">
 		
 		<meta property="og:type"          content="website">
-		<meta property="og:title"         content="Q ⟩ Circuit">
+		<meta property="og:title"         content="Q ⟩ Board">
 		<meta property="og:description"   content="Quantum computing in your browser.">
 		<meta property="og:image"         content="https://stewdio.github.io/q.js/Assets/q-thumbnail.png">
-		<meta property="og:url"           content="https://stewdio.github.io/q.js/Circuit.html">
+		<meta property="og:url"           content="https://stewdio.github.io/q.js/Board.html">
 		
-		<link rel="canonical"             href="https://stewdio.github.io/q.js/Circuit.html">
+		<link rel="canonical"             href="https://stewdio.github.io/q.js/Board.html">
 		<link rel="icon" type="image/png" href="Assets/q-favicon-064.png">
 		<link rel="apple-touch-icon"      href="Assets/q-favicon-144.png">
 		<link rel="stylesheet" type="text/css" href="Assets/style.css">
