--- a/Circuit.html
+++ b/Circuit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Q ⟩ Gate</title>
+		<title>Q ⟩ Circuit</title>
 		<meta charset="utf-8">
 		<meta name="description"          content="Q.js is quantum computing in your browser.">
 		<meta name="copyright"            content="Stewart Smith 2019">
