--- a/ComplexNumber.html
+++ b/ComplexNumber.html
@@ -267,7 +267,7 @@ cat.<a href="#this.index">index</a> === dog.<a href="#.prototype.index">index</a
 				</li>
 				<li>
 					<dt id=".EPSILON"><a href="#.EPSILON">EPSILON</a></dt>
-					<dd><code>new Q.ComplexNumber( Q.<a href="index.html#.EPSILON">EPSILON</a>, Q.<a href="index.html#.EPSILON">EPSILON</a> )</code></dd>
+					<dd><code>new Q.ComplexNumber( Q.<a href="Q.html#.EPSILON">EPSILON</a>, Q.<a href="Q.html#.EPSILON">EPSILON</a> )</code></dd>
 				</li>
 				<li>
 					<dt id=".INFINITY"><a href="#.INFINITY">INFINITY</a></dt>
