--- a/Qubit.html
+++ b/Qubit.html
@@ -128,7 +128,7 @@
 
 				Our unit circle or Bloch Sphere could be used as a state 
 				machine for quantum compuation, though 
-				<a href="index.html">Q</a> currently focusses on 
+				<a href="Q.html">Q</a> currently focusses on 
 				matrices for calculation. 
 			</p>
 			<br>
@@ -280,7 +280,7 @@ var a = new Q.Qubit( 0, 1 )
 					<dt id=".help"><a href="#.help">help</a></dt>
 					<dd>
 						<code>Function</code>.
-						Calls and returns the result of <code>Q.<a href="index.html#.help">help</a>( this )</code>
+						Calls and returns the result of <code>Q.<a href="Q.html#.help">help</a>( this )</code>
 						to provide helpful context in the form of a <code>String</code>.
 						Expects no arguments.
 					</dd>
@@ -345,9 +345,9 @@ var a = new Q.Qubit( 0, 1 )
 						<code>Function</code>.
 						Expects two instances of <code>Q.Qubit</code> as arguments.
 						If the <code><a href="#.controlBit">controlBit</a></code> of each are within 
-						<code>Q.<a href="index.html#.EPSILON">EPSILON</a></code>
+						<code>Q.<a href="Q.html#.EPSILON">EPSILON</a></code>
 						and the <code><a href="#.targetBit">targetBit</code></a> of each are within 
-						<code>Q.<a href="index.html#.EPSILON">EPSILON</a></code>
+						<code>Q.<a href="Q.html#.EPSILON">EPSILON</a></code>
 						then returns <code>true</code>, otherwise <code>false</code>.
 					</dd>
 				</li>
