--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ cat.<a href="ComplexNumber.html#.toString">toString</a>() <span class="comment">
 				This documentation is still being written, as is the code it documents.
 				We’re laying railroad track directly in front of the train.
 				While
-				the <code><a href="index.html">Q</a></code> object,
+				the <code><a href="Q.html">Q</a></code> object,
 				<code><a href="ComplexNumber.html">ComplexNumber</a></code>,
 				<code><a href="Matrix.html">Matrix</a></code>,
 				<code><a href="Qubit.html">Qubit</a></code>,
@@ -333,151 +333,6 @@ cat.<a href="ComplexNumber.html#.toString">toString</a>() <span class="comment">
 				<a href="https://en.wikipedia.org/wiki/Copywriting" target="_blank">copywriting</a> and minimalist diagrams?
 				Help us by <a href="https://github.com/stewdio/q.js/issues" target="_blank">creating (or resolving) issues</a> on <a href="https://github.com/stewdio/q.js" target="_blank">Q’s GitHub repository</a>.
 				Let’s make quantum accessible!
-			</p>
-			<hr>
-			<h3>The <code>Q</code> object</h3>
-			<p>
-				The root of Q.js is the <code>Q</code> object.
-				In addition to providing a single object to attach all other building blocks to
-				(and avoiding pollution of the global namespace)
-				the <code>Q</code> object provides some convenience functions.
-			</p>
-			<hr>
-			<h3 id="Constants">Constants</h3>
-			<p>
-				While Q <a href="#Constants">constants</a>
-				are appended directly to the <code>Q</code> object,
-				they are also appended to a <code>Q.constants</code> object
-				to make looking up constants in the JavaScript console trivial,
-				and to make iterating across all constants convenient via
-				functions like 
-				<code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object/entries" target="_blank">Object.entries</a></code>,
-				<code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object/keys" target="_blank">Object.keys</a></code>,
-				<code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object/values" target="_blank">Object.values</a></code>,
-				and so on.
-			</p>
-			<ul class="properties">
-				<li>
-					<dt id=".REVISION"><a href="#.REVISION">REVISION</a></dt>
-					<dd>
-						The code revision number. 
-						The version of Q currently loaded on this web page is revision #<strong id="q-revision">NOT FOUND</strong>.
-					</dd>
-				</li>
-				<li>
-					<dt id=".EPSILON"><a href="#.EPSILON">EPSILON</a></dt>
-					<dd>
-						<code>Number.EPSILON * 6</code>.
-						In the future we may wish to incorporate something like 
-						<a href="https://github.com/MikeMcl/bignumber.js" target="_blank">bignumber.js</a> in to Q,
-						but for now this higher epsilon value is necessary 
-						for the following equality to be true
-						when using JavaScript’s floating point implementation:
-<pre><code>
-var a = new Q.<a href="ComplexNumber.html">ComplexNumber</a>( 1, 2 )
-a.<a href="ComplexNumber.html#.prototype.multiply">multiply</a>( a )
-	.<a href="ComplexNumber.html#.prototype.multiply">isEqualTo</a>( 
-		a.<a href="ComplexNumber.html#.prototype.power">power</a>( new Q.<a href="ComplexNumber.html">ComplexNumber</a>( 2, 0 )))
-</code></pre>						
-					</dd>
-				</li>
-				<li>
-					<dt id=".RADIANS_TO_DEGREES"><a href="#.RADIANS_TO_DEGREES">RADIANS_TO_DEGREES</a></dt>
-					<dd>
-						180 ÷ π
-					</dd>
-				</li>
-			</ul>
-			<hr>
-			<h3 id="Properties">Properties</h3>
-			<ul class="properties">
-				<li>
-					<dt id=".verbosity"><a href="#.verbosity">verbosity</a></dt>
-					<dd>
-						Description TK.
-					</dd>
-				</li>
-				<li>
-					<dt id=".animals"><a href="#.animals">animals</a></dt>
-					<dd>
-						Description TK.
-					</dd>
-				</li>
-				<li>
-					<dt id=".colors"><a href="#.colors">colors</a></dt>
-					<dd>
-						Description TK.
-					</dd>
-				</li>
-				<li>
-					<dt id=".warn"><a href="#.warn">warn</a></dt>
-					<dd>
-						Description TK.
-					</dd>
-				</li>
-				<li>
-					<dt id=".error"><a href="#.error">error</a></dt>
-					<dd>
-						Description TK.
-					</dd>
-				</li>
-				<li>
-					<dt id=".extractDocumentation"><a href="#.extractDocumentation">extractDocumentation</a></dt>
-					<dd>
-						Description TK.
-					</dd>
-				</li>
-				<li>
-					<dt id=".help"><a href="#.help">help</a></dt>
-					<dd>
-						Description TK.
-					</dd>
-				</li>
-				<li>
-					<dt id=".constants"><a href="#.constants">constants</a></dt>
-					<dd>
-						Description TK.
-					</dd>
-				</li>
-				<li>
-					<dt id=".createConstant"><a href="#.createConstant">createConstant</a></dt>
-					<dd>
-						Description TK.
-					</dd>
-				</li>
-				<li>
-					<dt id=".createConstants"><a href="#.createConstants">createConstants</a></dt>
-					<dd>
-						Description TK.
-					</dd>
-				</li>
-				<li>
-					<dt id=".hypotenuse"><a href="#.hypotenuse">hypotenuse</a></dt>
-					<dd>
-						Description TK.
-					</dd>
-				</li>
-				<li>
-					<dt id=".logHypotenuse"><a href="#.logHypotenuse">logHypotenuse</a></dt>
-					<dd>
-						Description TK.
-					</dd>
-				</li>
-				<li>
-					<dt id=".toTitleCase"><a href="#.toTitleCase">toTitleCase</a></dt>
-					<dd>
-						<code>Function</code>.
-						Expects one <code>String</code> argument.
-						Replaces underscores with spaces, breaks apart text in to words, 
-						capitalizes the first letter of each word,
-						then returns a new <code>String</code> with these changes.
-					</dd>
-				</li>
-			</ul>
-			<hr>
-			<p>
-				Source:
-				<a href="https://github.com/stewdio/q.js/blob/master/Q/Q.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/Q/Q.js</a>
 			</p>
 		</main>
 		<script>
@@ -499,13 +354,6 @@ console.log( '\n\n\nNow try navigating to the other topic pages to learn more an
 var 
 cat = new Q.ComplexNumber( 1,  2 ),
 dog = new Q.ComplexNumber( 3, -4 )
-
-
-
-
-//  Insert the current Q.js revision number in to the description of the REVISION property.
-
-document.getElementById( 'q-revision' ).innerText = Q.REVISION
 
 
 
