ComplexNumber.power fix.

--- a/Q.html
+++ b/Q.html
@@ -90,9 +90,7 @@
 						when using JavaScript’s floating point implementation:
 <pre><code>
 var a = new Q.<a href="ComplexNumber.html">ComplexNumber</a>( 1, 2 )
-a.<a href="ComplexNumber.html#.prototype.multiply">multiply</a>( a )
-	.<a href="ComplexNumber.html#.prototype.multiply">isEqualTo</a>( 
-		a.<a href="ComplexNumber.html#.prototype.power">power</a>( new Q.<a href="ComplexNumber.html">ComplexNumber</a>( 2, 0 )))
+a.<a href="ComplexNumber.html#.prototype.multiply">multiply</a>( a ).<a href="ComplexNumber.html#.prototype.multiply">isEqualTo</a>( a.<a href="ComplexNumber.html#.prototype.power">power</a>( 2 ))
 </code></pre>						
 					</dd>
 				</li>
